--- a/docs/style.css
+++ b/docs/style.css
@@ -5,11 +5,8 @@ body {
   font-size: 62.5%;
   height: 100%;
   width: 100%;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
-  color: white;
-  background: rgb(2,0,36);
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 20%, rgba(0,212,255,1) 100%);
+  font-family: 'Montserrat', sans-serif;
+  background-color: FBFBFB;
 }
 
 pre {
@@ -39,12 +36,16 @@ code, .text-code {
 }
 
 .title {
-  font-size: 2.4rem;
+  font-weight: 900;
+  font-size: 4rem;
   padding-top: 2rem;
+  color: #3F3F3F;
+
 }
 
 .title-sub {
   padding: 1rem 0;
+  font-weight: 800;
 }
 
 .headline {
@@ -53,8 +54,9 @@ code, .text-code {
 }
 
 .gh-logo {
-  height: 1.5rem;
-  width: 1.5rem;
+  padding-top: 2rem;
+  height: 3.5rem;
+  width: 3.5rem;
 }
 
 a, a:visited {
@@ -64,21 +66,39 @@ a, a:visited {
 
 .split-container {
   display: flex;
-  width: 100%;
+  width: 50%;
+
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .demo-section {
-  padding-top: 3rem;
+  padding-top: 1rem;
+
 }
 
 .input-field {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   flex: 1;
+  background: #595959;
+  color: white;
+box-shadow: 4px 9px 35px rgba(89, 89, 89, 0.69);
+border-radius: 31px;
+height: 5rem;
+--demo-height : 15rem;
   height: var(--demo-height);
+  padding-top: 2rem;
 }
 
 .preview-window {
+  font-size: 1.6rem;
   flex: 1;
+  background: #fafafa;
+  color: white;
+box-shadow: 4px 9px 35px rgba(89, 89, 89, 0.69);
+border-radius: 31px;
+border: solid 0.5rem  #595959;
+--demo-height : 15rem;
   height: var(--demo-height);
 }
 
@@ -102,3 +122,5 @@ a, a:visited {
 .instruction-section-block {
   padding-bottom: 2rem;
 }
+
+
