--- a/docs/style.css
+++ b/docs/style.css
@@ -37,7 +37,7 @@ code, .text-code {
 
 .title {
   font-weight: 900;
-  font-size: 8.9vh;
+  font-size: 5.9vh;
   padding-top: 2rem;
   color: #3F3F3F;
 
@@ -72,6 +72,16 @@ a, a:visited {
 
   margin-left: auto;
   margin-right: auto;
+}
+
+.iframe-container{
+  display: flex;
+  width: 50%;
+
+  margin-left: auto;
+  margin-right: auto; box-shadow: 4px 9px 35px rgba(89, 89, 89, 0.69);
+  border-radius: 31px;
+  border: solid 0.5rem  #595959;background-color: transparent;padding: 0%;border-radius: 31px;margin: auto; resize: both; overflow: auto
 }
 
 .demo-section {
