--- a/docs/style.css
+++ b/docs/style.css
@@ -37,16 +37,16 @@ code, .text-code {
 
 .title {
   font-weight: 900;
-  font-size: 5.9vh;
+  font-size: 6.5vw;
   padding-top: 2rem;
   color: #3F3F3F;
 
 }
 
 .title-sub {
-  padding: 0.8vh 0;
+  padding: 1rem 0;
   font-weight: 800;
-  font-size: 3.0vh;
+  font-size: 2.5vh;
 }
 
 .headline {
@@ -72,16 +72,6 @@ a, a:visited {
 
   margin-left: auto;
   margin-right: auto;
-}
-
-.iframe-container{
-  display: flex;
-  width: 50%;
-
-  margin-left: auto;
-  margin-right: auto; box-shadow: 4px 9px 35px rgba(89, 89, 89, 0.69);
-  border-radius: 31px;
-  border: solid 0.5rem  #595959;background-color: transparent;padding: 0%;border-radius: 31px;margin: auto; resize: both; overflow: auto
 }
 
 .demo-section {
