--- a/docs/style.css
+++ b/docs/style.css
@@ -6,7 +6,7 @@ body {
   height: 100%;
   width: 100%;
   font-family: 'Montserrat', sans-serif;
-  background-color: FBFBFB;
+  background-color: #FBFBFB;
 }
 
 pre {
